--- a/front/src/app/views/login/login.component.html
+++ b/front/src/app/views/login/login.component.html
@@ -1,26 +1,16 @@
 <div class="container">
   <div class="content">
-    <iframe
-      width="1250"
-      height="703"
-      src="https://www.youtube.com/embed/0YRX4pEP6pY"
-      title="CARDIO 30 MINUTOS PARA ELIMINAR GRASA ABDOMINAL"
-      class="video"
+    <iframe width="1250" height="703" src="https://www.youtube.com/embed/0YRX4pEP6pY"
+      title="CARDIO 30 MINUTOS PARA ELIMINAR GRASA ABDOMINAL" class="video"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen
-    ></iframe>
+      allowfullscreen></iframe>
 
     <div class="form-container">
       <h3 class="title">¡Bienvenido de nuevo!</h3>
       <form [formGroup]="loginForm" (ngSubmit)="manejarEnvio()">
         <div class="input-group">
           <label for="email">Email</label>
-          <input
-            type="text"
-            id="email"
-            formControlName="email"
-            placeholder="Ingrese aquí su email"
-          />
+          <input type="text" id="email" formControlName="email" placeholder="Ingrese aquí su email" data-test="email"/>
           <p class="warning" *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched">
             El email es obligatorio
           </p>
@@ -28,24 +18,21 @@
 
         <div class="input-group">
           <label for="password">Contraseña</label>
-          <input
-            type="password"
-            id="password"
-            formControlName="password"
-            placeholder="******************"
-          />
+          <input type="password" id="password" formControlName="password" placeholder="******************"
+            data-test="password" />
           <p class="warning" *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched">
             La contraseña es obligatoria
           </p>
         </div>
 
         <div class="checkbox-group">
-          <input type="checkbox" id="remember" formControlName="rememberMe" />
+          <input type="checkbox" id="remember" formControlName="rememberMe" data-test="remember-button" />
           <label for="remember">Recordar</label>
         </div>
 
         <div class="button-group">
-          <button type="submit" class="btn" [disabled]="loginForm.invalid">Iniciar sesión</button>
+          <button type="submit" class="btn" [disabled]="loginForm.invalid" data-test="login-button">Iniciar
+            sesión</button>
         </div>
         <hr />
         <div class="links">
